ACS-11413 Fix FilterExpression and CursorPageIterable